removed gradient, replaced with background to avoid having too much color information

--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 header {
-    background: rgb(60, 49, 127);
-    background: linear-gradient(144deg, rgba(60, 49, 127, 1) 10%, rgba(167, 93, 214, 1) 19%, rgba(233, 155, 74, 1) 34%, rgba(218, 241, 252, 1) 48%, rgba(95, 167, 199, 1) 69%, rgba(167, 93, 214, 1) 92%, rgba(60, 49, 127, 1) 99%);
+
 background-repeat: no-repeat;
-    background-color: lightskyblue;
+
 }
 
 body{
